--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,8 @@ body.nis:not(.artefact) {
     width: 29px;
     height: 20px;
 }
+
+.col-header {
+    background-color: rgb(37, 37, 32);
+    cursor: pointer;
+}
