--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,11 @@ body.nis:not(.artefact) {
     transition: background-color 500ms;
 }
 
+/* .goal,
+.goalCol {
+    display: none;
+} */
+
 .expand {
     margin-bottom: 17em !important;
 }
