--- a/css/style.css
+++ b/css/style.css
@@ -146,4 +146,10 @@ body.nis:not(.artefact) {
 .col-header {
     background-color: rgb(27, 146, 175);
     cursor: pointer;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 }
