--- a/css/style.css
+++ b/css/style.css
@@ -189,4 +189,33 @@ body.nis:not(.artefact) {
 .pointer {
     cursor: pointer;
 }
-/* .contenttab, .contenttableft{float:right; width:90px; height:20px; line-height:20px; text-align:center; color:#BBB; cursor:pointer; background:url('/nis/alt1-currentskin/tabback.png') 0 0 / 100% 100%; position:relative; margin-left:-14px; z-index:11; margin-top:-1px;} */
+
+#research-btn {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+.text-label {
+    padding-top: 3px;
+    position: relative;
+    width: 10%;
+    text-align: right;
+}
+
+.text-input {
+    padding-top: 3px;
+    position: relative;
+    width: 90%;
+    text-align: left;
+}
+
+input {
+    width: 30%;
+}
+
+.researchTime {
+    font-size: 16px;
+    font-weight: bolder;
+    text-align: center;
+}
