--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ input {
     width: 30%;
 }
 
-.researchTime {
+.research {
     font-size: 18px;
     font-weight: bolder;
     text-align: center;
